--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
  
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <!-- Navigation -->
-    <div id="wrapper">
+    <div id="wrapper" class="col-lg-12">
       <!-- Sidebar -->
       <!-- to make a link smooth scroll to another section on the page, give the link the .page-scroll class and set the link target to a corresponding ID on the page.-->
-      <div id="sidebar-wrapper">
+      <div id="sidebar-wrapper" class="col-lg-2">
           <ul class="sidebar-nav">
               <li class="sidebar-brand">
                   <a class="page-scroll" href="#alerts">Alerts</a>
@@ -24,36 +24,106 @@
               <li class="sidebar-brand">
                   <a class="page-scroll" href="#badges">Badges</a>
               </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#breadcrumbs">Bread Crumbs</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#buttons">Buttons</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#color">Color Palettes</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#calendar">Calendar</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#dropdown">Dropdown</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#email">Email</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#filters">Filters</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#glyphs">Glyphs</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#grid">Grid</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#header">Header</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#inputs">Inputs</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#labels">Labels</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#list">List Groups</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#login">Log-In</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#menu">Menu</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#pagination">Pagination</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#panels">Panels</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#popups">Pop-Ups</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#progress">Progress Bars</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#side">Side Menu</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#sort">Sort</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#tables">Tables</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#tabs">Tabs</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#templates">Templates</a>
+              </li>
+              <li class="sidebar-brand">
+                  <a class="page-scroll" href="#typography">Typography</a>
+              </li>
           </ul>
       </div>
       <!-- /#sidebar-wrapper -->
 
       <!-- Page Content -->
-      <div id="page-content-wrapper">
+      <div id="page-content-wrapper" class="col-lg-10">
         <section id="alerts">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <h1>Alerts</h1>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-                  </div>
+          <h1>Alerts</h1>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="alert alert-warning">
+                <strong>Warning Message!</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
               </div>
+              <div class="alert alert-error">
+                <strong>Error Message!</strong> Numquam quos fuga quam suscipit sapiente perferendis magnam. 
+              </div>
+              <div class="alert alert-success">
+                <strong>Success Message!</strong> Totam officiis dolorum voluptatibus maxime molestiae iste.
+              </div>
+              <div class="alert alert-info">
+                <strong>Info Message!</strong> Consequatur facere deleniti cumque ducimus maiores nemo.
+              </div>
+            </div>
           </div>
         </section>  
-
-         <section id="badges">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12">
-                      <h1>Badges</h1>
-                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</p>
-                  </div>
-              </div>
-          </div>
-        </section>  
-
-
-
       </div>
       <!-- /#page-content-wrapper -->
     </div>
